--- a/style.css
+++ b/style.css
@@ -96,6 +96,11 @@ body {
     background-color: #2980b9;
 }
 
+#resetButton:disabled {
+    background-color:white;
+    color:gray;
+}
+
 #victoryMessage
 {
     font-size: 50px;
